# rag_lecture

./: .gitignore  PDF 파일 기반 RAG 고급 기법.pptx  README.md  pyproject.toml  rag_complete_guide_20260228003054.pptx  rag_lecture_part1_f.ipynb  rag_lecture_part1_part2.ipynb  rag_lecture_part1_v2.ipynb  rag_lecture_part2_v2.ipynb  rag_lecture_part3_4_5_v3.ipynb  rag_lecture_part3_part4_part5.ipynb  rag_lecture_part3_v2.ipynb  rag_lecture_part4_v2.ipynb  rag_lecture_part5_v2.ipynb  rag_system_complete_guide_20260228002108.pptx  requirements.txt  update_part4.py  ~$PDF 파일 기반 RAG 고급 기법.pptx
